--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@
       <ol class="toc"><li><a href="index.html" data-node="index">Overview</a></li><li><a href="naming-convention.html" data-node="naming-convention">Naming convention</a></li><li><a href="idiosyncrasies.html" data-node="idiosyncrasies">Idiosyncrasies</a></li><li><a href="examples.html" data-node="examples">Examples</a><ol><li><a href="image-decoding.html" data-node="image-decoding">Image decoding</a></li><li><a href="image-encoding.html" data-node="image-encoding">Image encoding</a></li><li><a href="metadata.html" data-node="metadata">Metadata</a></li></ol></li><li><a href="api.html" data-node="api">API</a><ol><li><a href="conditions.html" data-node="conditions">Conditions</a></li><li><a href="libheif--(-de-)-initialization.html" data-node="libheif--(-de-)-initialization">libheif (de)initialization</a></li><li><a href="context.html" data-node="context">Context</a></li><li><a href="image-handles.html" data-node="image-handles">Image handles</a></li><li><a href="images.html" data-node="images">Images</a></li><li><a href="encoding.html" data-node="encoding">Encoding</a></li><li><a href="decoding.html" data-node="decoding">Decoding</a></li><li><a href="0-metadata.html" data-node="0-metadata">Metadata</a></li></ol></li></ol>
     </aside>
     <main class="codex-section">
-      
+      <p>
    <code>cl-libheif</code> is a wrapper around libheif library which is a library for
    manipulation with HEIF format. Currently, this wrapper has support for
    encoding and decoding of toplevel images and extraction of metadata. Also,
-   currently only images with 8 bits per color are supported.
-
+   currently only images with 8 bits per color are supported.</p><p>   Dependencies:
+   </p><ul><li>libheif &gt;= 1.17.6 (with headers!)</li><li>libffi</li><li>C compiler, due to limitations in CFFI</li></ul><p>
+</p>
     </main>
   </article>
   <footer>
