deploy: 7a3f72fe22583daa7c52b50c94e7b7c9b9d1327b

--- a/api.html
+++ b/api.html
@@ -67,9 +67,12 @@
    <p>   </p><h1 id="context">Context</h1>
      
        <div class="codex-error codex-no-node">No node with name <code>with-context</code>.</div>
+       <div class="codex-error codex-no-node">No node with name <code>with-stream-reader</code>.</div>
        <div class="codex-error codex-no-node">No node with name <code>context-read-from-file!</code>.</div>
        <div class="codex-error codex-no-node">No node with name <code>context-read-from-octets!</code>.</div>
+       <div class="codex-error codex-no-node">No node with name <code>context-read-from-stream!</code>.</div>
        <div class="codex-error codex-no-node">No node with name <code>context-write-to-file!</code>.</div>
+       <div class="codex-error codex-no-node">No node with name <code>context-write-to-stream!</code>.</div>
        <div class="codex-error codex-no-node">No node with name <code>context-write-to-octets</code>.</div>
        <div class="codex-error codex-no-node">No node with name <code>context-top-level-image-ids</code>.</div>
        <div class="codex-error codex-no-node">No node with name <code>context-primary-image-id</code>.</div>
@@ -94,6 +97,7 @@
        <div class="codex-error codex-no-node">No node with name <code>image-bits-per-pixel</code>.</div>
        <div class="codex-error codex-no-node">No node with name <code>image-bits-per-pixel-range</code>.</div>
        <div class="codex-error codex-no-node">No node with name <code>image-plane-data</code>.</div>
+       <div class="codex-error codex-no-node">No node with name <code>image-has-plane-p</code>.</div>
        <div class="codex-error codex-no-node">No node with name <code>with-image</code>.</div>
        <div class="codex-error codex-no-node">No node with name <code>image-add-plane!</code>.</div>
        <div class="codex-error codex-no-node">No node with name <code>image-set-plane-data!</code>.</div>
