--- a/examples.html
+++ b/examples.html
@@ -76,6 +76,20 @@
       (with-primary-image-handle (handle ctx)
         (with-decode-image (image handle :monochrome :monochrome +default-decoding-options+)
           (image-plane-data image :y))))))
+     </code></pre><p>     The wrapper can also read from a stream:
+     </p><pre><code class="lisp">(serapeum:-&gt; decode (stream)
+             (values (simple-array (unsigned-byte 8)(* * 3)) &amp;optional))
+(defun decode (stream)
+  (with-libheif (+default-init-parameters+)
+    (with-context (ctx)
+      (with-stream-reader (reader stream)
+        (context-read-from-stream! ctx reader)
+        (with-primary-image-handle (handle ctx)
+          (with-decode-image (image handle :rgb :interleaved-rgb +default-decoding-options+)
+            (image-plane-data image :interleaved)))))))
+
+(with-open-file (input &quot;my-photo.heic&quot; :element-type '(unsigned-byte 8))
+  (decode input))
      </code></pre><p>     You can obtain a preferred colorspace with
      <code>image-handle-preferred-decoding-colorspace</code>.
    </p><p>   </p><h1 id="image-encoding">Image encoding</h1>
